--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marc Lory - Comédien & Figurant</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Marc Lory - Comédien & Figusrant</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body>
 	<!-- ==================== LOADER ==================== -->
     <div id="loader">
-        <div class="spinner"></div>
+        <div class="spinner"></div
     </div>
 
 	<script>
@@ -48,7 +48,7 @@
                     <li class="nav-item"><a href="#gallery" class="nav-link">Galerie</a></li>
                     <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
                 </ul>
-                <a href="assets/images/attached_assets/V - Cinéma_1753948698900.pdf" id="cv-download-btn" class="btn">Télécharger mon CV</a>
+                <a href="V - Cinéma_1753948698900.pdf" id="cv-download-btn" class="btn">Télécharger mon CV</a>
                 
                 <div class="popup-overlay" id="popup-overlay">
                     <div class="popup">
@@ -78,7 +78,7 @@
                 <h2>À propos de moi</h2>
                 <div class="about-content">
                     <div class="about-image">
-                        <img src="assets/images/attached_assets/Photo portrait - LORY Marc_1753948731388.jpg" alt="Portrait de Marc Lory">
+                        <img src="Photo portrait - LORY Marc_1753948731388.jpg" alt="Portrait de Marc Lory">
                     </div>
                     <div class="about-text">
                         <h3></h3>
@@ -217,6 +217,6 @@
 
     </div>
 
-    <script src="assets/js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>=
