Update sixieme carte expériences
tournage grange 2026

--- a/index.html
+++ b/index.html
@@ -161,6 +161,20 @@
                             </div>
                         </div>
                     </div>
+					<!-- Carte 6 -->
+					<div class="experience-card">
+                        <div class="card-inner">
+                            <div class="card-front">
+                                <h4>"Figuration dans le film Garance" </h4>
+                                <p>"Septembre 2025"</p>
+                            </div>
+                            <div class="card-back">
+                                <h5>Tournage à venir</h5>
+                                <p>"Sortie officiel: 2026"</p>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </section>
 
