--- a/index.html
+++ b/index.html
@@ -219,6 +219,10 @@
                         <p><strong>Adresse :</strong><br>78920 Ecquevilly</p>
                         <p><strong>Email :</strong><br><a href="mailto:lorymarc.pro@gmail.com">lorymarc.pro@gmail.com</a></p>
                         <p><strong>Téléphone :</strong><br><a href="tel:+33637943938">06 37 94 39 38</a></p>
+						<a href="https://www.instagram.com/marc_comédien_figurant" target="_blank">
+						  <i class="fab fa-instagram"></i>
+						</a>
+						<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
                     </div>
                 </div>
             </section>
