--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<!-- ==================== LOADER ==================== -->
     <div id="loader">
-        <div class="spinner"></div
+        <div class="spinner"></div>
     </div>
 
 	<script>
