--- a/index.html
+++ b/index.html
@@ -75,60 +75,60 @@
                     <div class="experience-card">
                         <div class="card-inner">
                             <div class="card-front">
-                                <h4>Figuration - "Le Grand Cirque"</h4>
-                                <p>Rôle d'un spectateur dans le long-métrage de Booder.</p>
+                                <h4>TF1 : Les 12 Coups de Midi</h4></br>
+                                <p>Sélectionné parmi 100 candidats. Prestation face caméra en direct, gestion du stress.</p>
                             </div>
                             <div class="card-back">
                                 <h5>Ce que ça m’a apporté</h5>
-                                <p>Une excellente compréhension du fonctionnement d'un plateau de tournage et de la rigueur requise.</p>
+                                <p>Développement de ma confiance face caméra et capacité à rester naturel sous pression.</p>
                             </div>
                         </div>
                     </div>
                     <div class="experience-card">
                         <div class="card-inner">
                             <div class="card-front">
-                                <h4>Théâtre - "Les Justes"</h4>
-                                <p>Rôle de Stepan Fedorov dans la pièce d'Albert Camus.</p>
+                                <h4>Vidéo immersive YouTube</h4>
+                                <p>Rôle maquillé (grand-père) dans un cache-cache géant. Improvisation, mime, jeu comique. Tournage multi-caméra synchronisé.</p>
                             </div>
                             <div class="card-back">
                                 <h5>Ce que ça m’a apporté</h5>
-                                <p>Le développement de la présence scénique, la maîtrise du texte et l'interaction directe avec le public.</p>
+                                <p>J'ai appris l'art de l'improvisation comique et la synchronisation avec plusieurs caméras.</p>
                             </div>
                         </div>
                     </div>
                     <div class="experience-card">
                         <div class="card-inner">
                             <div class="card-front">
-                                <h4>Statue Vivante - Festival des Arts</h4>
-                                <p>Performance de rue en tant que statue vivante.</p>
+                                <h4>Streamer sur Twitch</h4>
+                                <p>Créateur de contenu live. Plus de 1 000 abonnés, 1 620 € récoltés. Maîtrise caméra, improvisation, gestion de communauté.</p>
                             </div>
                             <div class="card-back">
                                 <h5>Ce que ça m’a apporté</h5>
-                                <p>Une discipline corporelle extrême, la patience et l'art de capter l'attention sans un mot.</p>
+                                <p>Cette expérience m'a donné une aisance naturelle face caméra et une capacité d'adaptation en temps réel.</p>
                             </div>
                         </div>
                     </div>
                     <div class="experience-card">
                         <div class="card-inner">
                             <div class="card-front">
-                                <h4>Publicité - "Vittel"</h4>
-                                <p>Figuration active dans un spot publicitaire pour la marque d'eau minérale.</p>
+                                <h4>Préparation statue vivante</h4>
+                                <p>Travail de personnage et maquillage pro. Créativité et implication saluées malgré l'annulation.</p>
                             </div>
                             <div class="card-back">
                                 <h5>Ce que ça m’a apporté</h5>
-                                <p>La rapidité d'exécution et l'adaptation aux contraintes techniques d'un tournage publicitaire.</p>
+                                <p>J'ai développé mes compétences en création de personnage et en maquillage artistique.</p>
                             </div>
                         </div>
                     </div>
                      <div class="experience-card">
                         <div class="card-inner">
                             <div class="card-front">
-                                <h4>Court-métrage - "Le Dernier Mot"</h4>
-                                <p>Rôle secondaire dans un film étudiant, explorant un personnage complexe.</p>
+                                <h4>Pièce de théâtre en primaire</h4>
+                                <p>Premiers pas sur scène. Découverte de la scène, du jeu et du lien avec le public.</p>
                             </div>
                             <div class="card-back">
                                 <h5>Ce que ça m’a apporté</h5>
-                                <p>Une collaboration créative intense et la liberté d'expérimenter dans un cadre plus intimiste.</p>
+                                <p>Cette première expérience a révélé ma passion pour la scène et le contact avec le public.</p>
                             </div>
                         </div>
                     </div>
