--- a/index.html
+++ b/index.html
@@ -185,36 +185,41 @@
             <section id="contact" class="section-container">
                 <h2>Contactez-moi</h2>
                 <div class="contact-content">
-                    <div class="contact-form-container">
-                        <form action="https://formspree.io/f/xblkqabr" method="post">
-                            <div class="form-group">
-                                <label for="name">Nom</label>
-                                <input type="text" id="name" name="name" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="email" id="email" name="_replyto" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="message">Message</label>
-                                <textarea id="message" name="message" rows="5" required></textarea>
-                            </div>
-                            <button type="submit" class="btn">Envoyer</button>
-                        </form>
-                    </div>
-                    <div class="contact-info">
-                        <h3>Informations</h3>
-                        <p><strong>Adresse :</strong><br>78920 Ecquevilly</p>
-                        <p><strong>Email :</strong><br><a href="mailto:lorymarc.pro@gmail.com">lorymarc.pro@gmail.com</a></p>
-                        <p><strong>Téléphone :</strong><br><a href="tel:+33637943938">06 37 94 39 38</a></p>
-                        <a href="https://www.instagram.com/marc_comedien_figurant" target="_blank" class="icon-large">
-                          <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="https://www.linkedin.com/in/marclory" target="_blank" class="icon-large">
-                            <i class="fab fa-linkedin"></i>
-                        </a>
-                    </div>
-                </div>
+				  <div class="contact-form-container">
+				    <h2>Contactez-moi</h2>
+				    <form action="https://formspree.io/f/xblkqabr" method="post">
+				      <div class="form-group">
+				        <label for="name">Nom</label>
+				        <input type="text" id="name" name="name" required>
+				      </div>
+				      <div class="form-group">
+				        <label for="email">Email</label>
+				        <input type="email" id="email" name="_replyto" required>
+				      </div>
+				      <div class="form-group">
+				        <label for="message">Message</label>
+				        <textarea id="message" name="message" rows="5" required></textarea>
+				      </div>
+				      <button type="submit" class="btn">Envoyer</button>
+				    </form>
+				  </div>
+				
+				  <div class="contact-info">
+				    <h3>Informations</h3>
+				    <p><strong>Adresse :</strong><br>78920 Ecquevilly</p>
+				    <p><strong>Email :</strong><br><a href="mailto:lorymarc.pro@gmail.com">lorymarc.pro@gmail.com</a></p>
+				    <p><strong>Téléphone :</strong><br><a href="tel:+33637943938">06 37 94 39 38</a></p>
+				    <div class="social-icons">
+				      <a href="https://www.instagram.com/marc_comedien_figurant" target="_blank" class="icon-large">
+				        <i class="fab fa-instagram"></i>
+				      </a>
+				      <a href="https://www.linkedin.com/in/marclory" target="_blank" class="icon-large">
+				        <i class="fab fa-linkedin"></i>
+				      </a>
+				    </div>
+				  </div>
+				</div>
+
             </section>
         </main>
 
