--- a/index.html
+++ b/index.html
@@ -188,20 +188,30 @@
 				  <div class="contact-form-container">
 				    <h2>Contactez-moi</h2>
 				    <form action="https://formspree.io/f/xblkqabr" method="post">
-				      <div class="form-group">
-				        <label for="name">Nom</label>
-				        <input type="text" id="name" name="name" required>
-				      </div>
-				      <div class="form-group">
-				        <label for="email">Email</label>
-				        <input type="email" id="email" name="_replyto" required>
-				      </div>
-				      <div class="form-group">
-				        <label for="message">Message</label>
-				        <textarea id="message" name="message" rows="5" required></textarea>
-				      </div>
-				      <button type="submit" class="btn">Envoyer</button>
-				    </form>
+					  <div class="form-group">
+					    <label for="name">Nom</label>
+					    <div class="input-icon">
+					      <i class="fas fa-user"></i>
+					      <input type="text" id="name" name="name" placeholder="Entrez votre nom" required>
+					    </div>
+					  </div>
+					  <div class="form-group">
+					    <label for="email">Email</label>
+					    <div class="input-icon">
+					      <i class="fas fa-envelope"></i>
+					      <input type="email" id="email" name="_replyto" placeholder="Votre adresse email" required>
+					    </div>
+					  </div>
+					  <div class="form-group">
+					    <label for="message">Message</label>
+					    <div class="input-icon textarea-icon">
+					      <i class="fas fa-comment"></i>
+					      <textarea id="message" name="message" rows="5" placeholder="Votre message..." required></textarea>
+					    </div>
+					  </div>
+					  <button type="submit" class="btn"><i class="fas fa-paper-plane"></i> Envoyer</button>
+					</form>
+
 				  </div>
 				
 				  <div class="contact-info">
