--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a href="#gallery-desktop" class="nav-link">Galerie</a></li>
                     <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
                 </ul>
-                <a href="V - Cinéma_1753948698900.pdf" id="cv-download-btn" class="btn">Télécharger mon CV</a>
+                <a href="CV.pdf" id="cv-download-btn" class="btn">Télécharger mon CV</a>
                 
                 <div class="popup-overlay" id="popup-overlay">
                     <div class="popup">
