--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 				
 				  <div class="contact-info">
 				    <h3>Informations</h3>
-				    <p><strong>Adresse :</strong><br>78920 Ecquevilly</p>
+				    <p><strong>Adresse :</strong><br><span>78920 Ecquevilly</span></p>
 				    <p><strong>Email :</strong><br><a href="mailto:lorymarc.pro@gmail.com">lorymarc.pro@gmail.com</a></p>
 				    <p><strong>Téléphone :</strong><br><a href="tel:+33637943938">06 37 94 39 38</a></p>
 				    <div class="social-icons">
