--- a/index.html
+++ b/index.html
@@ -151,17 +151,20 @@
                 <h2 class="gallery-title">Galerie Photos</h2>
                 
                 <div id="gallery-desktop" class="carousel-container carousel-desktop">
-                    <div class="carousel">
-                        <div class="carousel-item"><img src="1.jpg" alt="Photo 1"></div>
-                        <div class="carousel-item"><img src="2.jpg" alt="Photo 2"></div>
-                        <div class="carousel-item"><img src="3.jpg" alt="Photo 3"></div>
-                        <div class="carousel-item"><img src="4.jpg" alt="Photo 4"></div>
-                        <div class="carousel-item"><img src="5.jpg" alt="Photo 5"></div>
-                        <div class="carousel-item"><img src="6.jpg" alt="Photo 6"></div>
-                    </div>
-                    <button class="nav-button prev-button"><i class="fas fa-chevron-left"></i></button>
-                    <button class="nav-button next-button"><i class="fas fa-chevron-right"></i></button>
-                </div>
+				    <div class="carousel">
+				        <div class="carousel-item"><img src="1.jpg" alt="Photo 1"></div>
+				        <div class="carousel-item"><img src="2.jpg" alt="Photo 2"></div>
+				        <div class="carousel-item"><img src="3.jpg" alt="Photo 3"></div>
+				        <div class="carousel-item"><img src="4.jpg" alt="Photo 4"></div>
+				        <div class="carousel-item"><img src="5.jpg" alt="Photo 5"></div>
+				        <div class="carousel-item"><img src="6.jpg" alt="Photo 6"></div>
+				    </div>
+				    <div class="carousel-controls">
+				        <button class="nav-button prev-button"><i class="fas fa-chevron-left"></i></button>
+				        <button class="nav-button next-button"><i class="fas fa-chevron-right"></i></button>
+				    </div>
+				</div>
+
                 
                 <div id="gallery-mobile" class="carousel-container carousel-mobile">
                     <div class="carousel">
