--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
 				        <div class="carousel-item"><img src="5.jpg" alt="Photo 5"></div>
 				        <div class="carousel-item"><img src="6.jpg" alt="Photo 6"></div>
 				    </div>
-				    <div class="carousel-controls">
-				        <button class="nav-button prev-button"><i class="fas fa-chevron-left"></i></button>
-				        <button class="nav-button next-button"><i class="fas fa-chevron-right"></i></button>
-				    </div>
+				      <div class="carousel-controls">
+					    <button class="nav-button prev-button">&#10094;</button>
+					    <button class="nav-button next-button">&#10095;</button>
+					  </div>
 				</div>
 
                 
