--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 				      <a href="https://www.instagram.com/marc_comedien_figurant" target="_blank" class="icon-large">
 				        <i class="fab fa-instagram"></i>
 				      </a>
-				      <a href="https://www.linkedin.com/in/marclory" target="_blank" class="icon-large">
+				      <a href="https://www.linkedin.com/in/marc-l-938655214" target="_blank" class="icon-large">
 				        <i class="fab fa-linkedin"></i>
 				      </a>
 				    </div>
