--- a/index.html
+++ b/index.html
@@ -69,6 +69,52 @@
                 </div>
                 <div class="hero-background-overlay"></div>
             </section>
+			<section id="skills" class="skills-section">
+			  <div class="container">
+			    <h2 class="section-title">Mes compétences</h2>
+			    <p class="section-subtitle">Voici un aperçu de mes talents en tant que comédien et créateur de contenu.</p>
+			
+			    <div class="skills-grid">
+			      <div class="skill-card">
+			        <h3>Improvisation</h3>
+			        <div class="skill-bar">
+			          <div class="skill-progress" data-progress="90"></div>
+			        </div>
+			      </div>
+			      <div class="skill-card">
+			        <h3>Jeu devant caméra</h3>
+			        <div class="skill-bar">
+			          <div class="skill-progress" data-progress="85"></div>
+			        </div>
+			      </div>
+			      <div class="skill-card">
+			        <h3>Streaming / Interaction</h3>
+			        <div class="skill-bar">
+			          <div class="skill-progress" data-progress="95"></div>
+			        </div>
+			      </div>
+			      <div class="skill-card">
+			        <h3>Doublage / Voix off</h3>
+			        <div class="skill-bar">
+			          <div class="skill-progress" data-progress="80"></div>
+			        </div>
+			      </div>
+			      <div class="skill-card">
+			        <h3>Expression corporelle / mime</h3>
+			        <div class="skill-bar">
+			          <div class="skill-progress" data-progress="75"></div>
+			        </div>
+			      </div>
+			      <div class="skill-card">
+			        <h3>Improvisation scénique avancée</h3>
+			        <div class="skill-bar">
+			          <div class="skill-progress" data-progress="85"></div>
+			        </div>
+			      </div>
+			    </div>
+			  </div>
+			</section>
+
              <section id="experiences" class="section-container">
                 <h2>Mes Expériences</h2>
                 <div class="experiences-grid">
