--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			        </div>
 			      </div>
 			      <div class="skill-card">
-			        <h3>Streaming / Interaction</h3>
+			        <h3>Streaming</h3>
 			        <div class="skill-bar">
 			          <div class="skill-progress" data-progress="95"></div>
 			        </div>
@@ -100,13 +100,13 @@
 			        </div>
 			      </div>
 			      <div class="skill-card">
-			        <h3>Expression corporelle / mime</h3>
+			        <h3>Expression corporelle</h3>
 			        <div class="skill-bar">
 			          <div class="skill-progress" data-progress="75"></div>
 			        </div>
 			      </div>
 			      <div class="skill-card">
-			        <h3>Improvisation scénique avancée</h3>
+			        <h3>Improvisation scénique</h3>
 			        <div class="skill-bar">
 			          <div class="skill-progress" data-progress="85"></div>
 			        </div>
@@ -114,7 +114,6 @@
 			    </div>
 			  </div>
 			</section>
-
              <section id="experiences" class="section-container">
                 <h2>Mes Expériences</h2>
                 <div class="experiences-grid">
