--- a/index.html
+++ b/index.html
@@ -69,48 +69,32 @@
                 </div>
                 <div class="hero-background-overlay"></div>
             </section>
-			<section id="skills" class="skills-section">
-			  <div class="container">
-			    <h2 class="section-title">Mes compétences</h2>
-			    <p class="section-subtitle">Voici un aperçu de mes talents en tant que comédien et créateur de contenu.</p>
-			
-			    <div class="skills-grid">
-			      <div class="skill-card">
-			        <h3>Improvisation</h3>
-			        <div class="skill-bar">
-			          <div class="skill-progress" data-progress="90"></div>
-			        </div>
-			      </div>
-			      <div class="skill-card">
-			        <h3>Jeu devant caméra</h3>
-			        <div class="skill-bar">
-			          <div class="skill-progress" data-progress="85"></div>
-			        </div>
-			      </div>
-			      <div class="skill-card">
-			        <h3>Streaming</h3>
-			        <div class="skill-bar">
-			          <div class="skill-progress" data-progress="95"></div>
-			        </div>
-			      </div>
-			      <div class="skill-card">
-			        <h3>Doublage / Voix off</h3>
-			        <div class="skill-bar">
-			          <div class="skill-progress" data-progress="80"></div>
-			        </div>
-			      </div>
-			      <div class="skill-card">
-			        <h3>Expression corporelle</h3>
-			        <div class="skill-bar">
-			          <div class="skill-progress" data-progress="75"></div>
-			        </div>
-			      </div>
-			      <div class="skill-card">
-			        <h3>Improvisation scénique</h3>
-			        <div class="skill-bar">
-			          <div class="skill-progress" data-progress="85"></div>
-			        </div>
-			      </div>
+			<section class="skills" id="skills">
+			  <h2>Compétences</h2>
+			  <div class="skills-grid">
+			    <div class="skill-card" data-level="85">
+			      <h3>Jeu d’acteur</h3>
+			      <div class="progress-bar"><span></span></div>
+			    </div>
+			    <div class="skill-card" data-level="70">
+			      <h3>Expression scénique</h3>
+			      <div class="progress-bar"><span></span></div>
+			    </div>
+			    <div class="skill-card" data-level="60">
+			      <h3>Doublage / Voix-off</h3>
+			      <div class="progress-bar"><span></span></div>
+			    </div>
+			    <div class="skill-card" data-level="75">
+			      <h3>Communication</h3>
+			      <div class="progress-bar"><span></span></div>
+			    </div>
+			    <div class="skill-card" data-level="65">
+			      <h3>Improvisation</h3>
+			      <div class="progress-bar"><span></span></div>
+			    </div>
+			    <div class="skill-card" data-level="50">
+			      <h3>Création de contenu</h3>
+			      <div class="progress-bar"><span></span></div>
 			    </div>
 			  </div>
 			</section>
