--- a/index.html
+++ b/index.html
@@ -209,14 +209,14 @@
 					</div>
 					<script>
 						document.addEventListener("DOMContentLoaded", () => {
-					  const track = document.querySelector("#mobile-gallery .gallery-track");
-					  const images = Array.from(track.querySelectorAll("img"));
-					  const lightbox = document.getElementById("lightbox");
-					  const lightboxImg = document.getElementById("lightbox-img");
-					  const closeBtn = lightbox.querySelector(".close");
-					  const prevBtn = lightbox.querySelector(".prev");
-					  const nextBtn = lightbox.querySelector(".next");
-					  let currentIndex = 0;
+						  const track = document.querySelector("#mobile-gallery .gallery-track");
+						  const images = Array.from(track.querySelectorAll("img"));
+						  const lightbox = document.getElementById("lightbox");
+						  const lightboxImg = document.getElementById("lightbox-img");
+						  const closeBtn = lightbox.querySelector(".close");
+						  const prevBtn = lightbox.querySelector(".prev");
+						  const nextBtn = lightbox.querySelector(".next");
+						  let currentIndex = 0;
 					
 					  images.forEach((img, i) => {
 					    img.addEventListener("click", () => {
@@ -273,11 +273,11 @@
 					  </div>
 					  <div class="form-group">
 					    <label for="message">Message</label>
-					    <div class="input-icon textarea-icon">
+					    <div class="input-icon">
 					      <i class="fas fa-comment"></i>
 					      <textarea id="message" name="message" rows="1" placeholder="Le contenu global de votre message..." required></textarea>
 					    </div>
-					  </div>
+					  </div> 
 					  <button type="submit" class="btn"><i class="fas fa-paper-plane"></i> Envoyer</button>
 					</form>
 
