--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 					    <label for="message">Message</label>
 					    <div class="input-icon">
 					      <i class="fas fa-comment"></i>
-					      <textarea id="message" name="message" placeholder="Le contenu global de votre message..." required> </textarea>
+					      <input type="message" id="message" name="_message" placeholder="Le contenu global de votre message..." required>
 					    </div>
 					  </div> 
 					  <button type="submit" class="btn"><i class="fas fa-paper-plane"></i> Envoyer</button>
