--- a/index.html
+++ b/index.html
@@ -96,6 +96,85 @@
 			    </div>
 			  </div>
 			</section>
+
+	<style>
+	.skills {
+	  padding: 4rem 2rem;
+	  text-align: center;
+	  background: var(--card-bg);
+	}
+	
+	.skills h2 {
+	  font-size: 2.5rem;
+	  margin-bottom: 3rem;
+	  color: var(--text-color);
+	}
+	
+	.skills-grid {
+	  display: grid;
+	  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+	  gap: 2rem;
+	  max-width: 1200px;
+	  margin: auto;
+	}
+	
+	.skill-card {
+	  background: var(--background-color);
+	  border-radius: 15px;
+	  padding: 2rem;
+	  box-shadow: var(--shadow);
+	  text-align: left;
+	  transition: transform 0.3s ease;
+	}
+	
+	.skill-card:hover {
+	  transform: translateY(-8px);
+	}
+	
+	.skill-card h3 {
+	  margin-bottom: 1rem;
+	  font-size: 1.3rem;
+	  color: var(--text-color);
+	}
+	
+	.progress-bar {
+	  position: relative;
+	  height: 12px;
+	  width: 100%;
+	  background: #333;
+	  border-radius: 10px;
+	  overflow: hidden;
+	}
+	
+	.progress-bar span {
+	  display: block;
+	  height: 100%;
+	  width: 0; 
+	  background: #d4af37; 
+	  border-radius: 10px;
+	  transition: width 1.8s ease;
+	}
+	</style>
+	
+	<script>
+	const skillsSection = document.querySelector("#skills");
+	const skillBars = document.querySelectorAll(".skill-card");
+	
+	const observer = new IntersectionObserver((entries) => {
+	  entries.forEach(entry => {
+	    if (entry.isIntersecting) {
+	      skillBars.forEach(card => {
+	        let level = card.getAttribute("data-level");
+	        let span = card.querySelector(".progress-bar span");
+	        span.style.width = level + "%";
+	      });
+	      observer.disconnect(); 
+	    }
+	  });
+	}, { threshold: 0.3 });
+	
+	observer.observe(skillsSection);
+	</script>
              <section id="experiences" class="section-container">
                 <h2>Mes Expériences</h2>
                 <div class="experiences-grid">
