--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                                 <p>"Septembre 2025"</p>
                             </div>
                             <div class="card-back">
-                                <h5>ce que ça m'a apporté</h5>
+                                <h5>Ce que ça m'a apporté</h5>
                                 <p>J'ai pu rencontrer du monde et développer un réseau. J'ai également pu entrevoir les coulisses d'un tournage et son déroulement. </p>
                             </div>
                         </div>
