--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			      </div>
 			    </div>
 			    <div class="skill-card" data-level="95">
-			      <i class="fas fa-chalkboard-user"></i>
+			      <i class="fa-solid fa-stopwatch"></i>
 			      <h3>Ponctualité</h3>
 			      <div class="progress-container">
 			        <div class="progress-bar"><span></span></div>
