--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			      </div>
 			    </div>
 			    <div class="skill-card" data-level="85">
-			      <i class="fas fa-comments"></i>
+			      <i class="fa-solid fa-screwdriver-wrench"></i>
 			      <h3>Polyvalence</h3>
 			      <div class="progress-container">
 			        <div class="progress-bar"><span></span></div>
