--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <a href="#hero-about" class="nav-logo">Marc Lory</a>
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="#hero-about" class="nav-link"><i class="fas fa-home"></i></a></li>
+					<li class="nav-item"><a href="#skills" class="nav-link">Compétences</a></li>
                     <li class="nav-item"><a href="#experiences" class="nav-link">Expériences</a></li>
                     <li class="nav-item"><a href="#gallery-desktop" class="nav-link">Galerie</a></li>
                     <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
