--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li class="nav-item"><a href="#hero-about" class="nav-link"><i class="fas fa-home"></i></a></li>
 					<li class="nav-item"><a href="#skills" class="nav-link">Compétences</a></li>
                     <li class="nav-item"><a href="#experiences" class="nav-link">Expériences</a></li>
-                    <li class="nav-item"><a href="#gallery-desktop" class="nav-link">Galerie</a></li>
+                    <li class="nav-item"><a href="#gallery" class="nav-link">Galerie</a></li>
                     <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
                 </ul>
                 <a href="CV.pdf" id="cv-download-btn" class="btn">Télécharger mon CV</a>
