--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <li class="nav-item"><a href="#experiences" class="nav-link">Expériences</a></li>
                     <li class="nav-item"><a href="#gallery" class="nav-link">Galerie</a></li>
                     <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
-                </ul>
+                </ul> 
                 <a href="CV.pdf" id="cv-download-btn" class="btn">Télécharger mon CV</a>
                 
                 <div class="popup-overlay" id="popup-overlay">
@@ -456,11 +456,13 @@
                 <div class="footer-col footer-about">
                     <a href="#" class="nav-logo footer-logo">Marc Lory</a>
                     <p class="footer-copyright">&copy; 2025 Marc Lory. Tous droits réservés.</p>
+					<p class="cpgu-link">Voir notre <a href="cpgu.html">Politique de confidentialité</a> et nos <a href="conditions.html">Conditions générales d'utilisation</a></p> 
                 </div>
                 <div class="footer-col footer-links">
                     <h3>Navigation</h3>
                     <ul>
                         <li><a href="#about">À propos</a></li>
+						<li><a href="#skills">Compétences</a></li>
                         <li><a href="#experiences">Expériences</a></li>
                         <li><a href="#gallery-desktop">Galerie</a></li>
                         <li><a href="#contact">Contact</a></li>
