Update and rename cgpu.html to conditions.html

--- a/conditions.html
+++ b/conditions.html
@@ -20,6 +20,7 @@
     pre.notice{background:#f3f4f6;padding:12px;border-radius:8px;color:#111;overflow:auto}
     @media (max-width:600px){.container{margin:16px;padding:16px}} 
   </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
