--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                 <div class="footer-col footer-about">
                     <a href="#" class="nav-logo footer-logo">Marc Lory</a>
                     <p class="footer-copyright">&copy; 2025 Marc Lory. Tous droits réservés.</p>
-					<p class="cpgu-link">Voir notre <a href="cgpu.html">Politique de confidentialité</a> et nos <a href="conditions.html">Conditions générales d'utilisation</a></p> 
+					<p class="cpgu-link">Voir notre <a href="privacy.html">Politique de confidentialité</a> et nos <a href="conditions.html">Conditions générales d'utilisation</a></p> 
                 </div>
                 <div class="footer-col footer-links">
                     <h3>Navigation</h3>
