--- a/index.html
+++ b/index.html
@@ -443,7 +443,10 @@
 				      </a>
 				      <a href="https://www.linkedin.com/in/marc-l-938655214" target="_blank" class="icon-large">
 				        <i class="fab fa-linkedin"></i>
-				      </a>
+				      </a> 
+					<a href="https://www.facebook.com/profile.php?id=61580467983605" target="_blank" class="icon-large">
+				        <i class="fab fa-facebook"></i>
+				      </a> 
 				    </div>
 				  </div>
 				</div>
