--- a/index.html
+++ b/index.html
@@ -476,6 +476,9 @@
                     <div class="social-icons">
                         <a href="https://www.instagram.com/marc_comedien_figurant" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/marclory" target="_blank"><i class="fab fa-linkedin"></i></a>
+						<a href="https://www.facebook.com/profile.php?id=61580467983605" target="_blank" class="icon-large">
+				        <i class="fab fa-facebook"></i>
+				      </a> 
                     </div>
                 </div>
             </div>
