--- a/index.html
+++ b/index.html
@@ -491,8 +491,8 @@
         </div>
         <h4>Thème du site</h4>
         <div class="theme-buttons">
-            <span class="theme-btn light-mode active" onclick="setTheme('light')">Light</span>
-            <span class="theme-btn dark-mode" onclick="setTheme('dark')">Dark</span>
+			<span class="theme-btn dark-mode active" onclick="setTheme('dark')">Dark</span>
+            <span class="theme-btn light-mode" onclick="setTheme('light')">Light</span>
         </div>
         <h4>Couleurs du site</h4>
         <div class="colors">
