--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 					  </div>
 				</div>
             </section>
-					<div id="mobile-gallery fade-up">
+					<div id="mobile-gallery">
 					  <div class="gallery-track">
 					    <img src="1.jpg" alt="Photo 1">
 					    <img src="2.jpg" alt="Photo 2">
