--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </header>
 
         <main>
-            <section id="hero-about" class="hero-about-section data-aos="fade-up"">
+            <section id="hero-about" class="hero-about-section" data-aos="fade-up">
                 <div class="hero-content">
                     <div class="animated-text-container">
                         <h1 class="animated-text">Marc Lory</h1>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="hero-background-overlay"></div>
             </section>
-			<section class="skills data-aos="fade-up"" id="skills">
+			<section class="skills" data-aos="fade-up" id="skills">
 			  <h2>Compétences</h2>
 			  <div class="skills-grid">
 			    <div class="skill-card" data-level="90">
@@ -246,7 +246,7 @@
 			
 			observer.observe(skillsSection);
 			</script>
-             <section id="experiences" class="section-container data-aos="fade-up"">
+             <section id="experiences" class="section-container" data-aos="fade-up">
                 <h2>Mes Expériences</h2>
                 <div class="experiences-grid">
 					<div class="experience-card">
@@ -323,7 +323,7 @@
                     </div>
                 </div>
             </section>
-            <section id="gallery" class="data-aos="fade-up" section-container">
+            <section id="gallery" data-aos="fade-up" section-container">
                 <h2 class="gallery-title">Galerie Photos</h2>
                 
                 <div id="gallery-desktop" class="carousel-container carousel-desktop">
@@ -341,7 +341,7 @@
 					  </div>
 				</div>
             </section>
-					<div id="mobile-gallery">
+					<div id="mobile-gallery" data-aos="fade-up">
 					  <div class="gallery-track">
 					    <img src="1.jpg" alt="Photo 1">
 					    <img src="2.jpg" alt="Photo 2">
@@ -402,7 +402,7 @@
 					});
 				</script>
 
-            <section id="contact" class="section-container data-aos="fade-up"">
+            <section id="contact" class="section-container" data-aos="fade-up">
                 <h2>Contactez-moi</h2>
                 <div class="contact-content">
 				  <div class="contact-form-container">
@@ -456,7 +456,7 @@
         </main>
 
         <footer>
-            <div class="footer-container data-aos="fade-up"">
+            <div class="footer-container" data-aos="fade-up">
                 <div class="footer-col footer-about">
                     <a href="#" class="nav-logo footer-logo">Marc Lory</a>
                     <p class="footer-copyright">&copy; 2025 Marc Lory. Tous droits réservés.</p>
