--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                 <div class="footer-col footer-links">
                     <h3>Navigation</h3>
                     <ul>
-                        <li><a href="#about">À propos</a></li>
+                        <li><a href="#hero-about">À propos</a></li>
 						<li><a href="#skills">Compétences</a></li>
                         <li><a href="#experiences">Expériences</a></li>
                         <li><a href="#gallery-desktop">Galerie</a></li>
