--- a/index.html
+++ b/index.html
@@ -21,6 +21,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+	<meta name="description" content="Portfolio de Lory Marc, créateur web et designer. Découvrez mes projets, compétences et réalisations.">
+	<!-- GOOGLE SEO -->
+	<link rel="canonical" href="https://lory-marc.fr/">
+	
+	<meta property="og:title" content="Lory Marc – Portfolio">
+	<meta property="og:description" content="Portfolio de Lory Marc, comédien amateur et figurant cinéma.">
+	<meta property="og:image" content="https://lory-marc.fr/logo.webp">
+	<meta property="og:url" content="https://lory-marc.fr/">
+	<meta property="og:type" content="website">
+	
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Lory Marc – Portfolio">
+	<meta name="twitter:description" content="Portfolio de Lory Marc, comédien amateur et figurant cinéma.">
+	<meta name="twitter:image" content="https://lory-marc.fr/logo.webp">
+
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "WebSite",
+		  "name": "Lory Marc",
+		  "url": "https://lory-marc.fr",
+		  "description": "Portfolio de Lory Marc, créateur web et designer.",
+		  "publisher": {
+		    "@type": "Person",
+		    "name": "Lory Marc"
+		  }
+		}
+	</script>
 </head>
 <body class="dark">
 	<!-- Google Tag Manager (noscript) -->
