--- a/index.html
+++ b/index.html
@@ -473,8 +473,8 @@
 				      <a href="https://www.linkedin.com/in/marc-l-938655214" target="_blank" class="icon-large">
 				        <i class="fab fa-linkedin"></i>
 				      </a> 	
-					<a href="https://www.facebook.com/profile.php?id=61580467983605" target="_blank" class="icon-large">
-				        <i class="fab fa-facebook"></i>
+					<a href="https://nawak.com/book/marc-lory" target="_blank" class="icon-large">
+				        <i class="fa-solid fa-n"></i>
 				      </a> 
 				    </div>
 				  </div>
@@ -505,8 +505,8 @@
                     <div class="social-icons">
                         <a href="https://www.instagram.com/marc_comedien_figurant" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/marc-l-938655214" target="_blank"><i class="fab fa-linkedin"></i></a>
-						<a href="https://www.facebook.com/profile.php?id=61580467983605" target="_blank" class="icon-large">
-				        <i class="fab fa-facebook"></i>
+						<a href="https://nawak.com/book/marc-lory" target="_blank" class="icon-large">
+				        <i class="fa-solid fa-n"></i>
 				      </a> 
                     </div>
                 </div>
