Modification de la balise meta pour le seo google.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marc Lory - Comédien & Figurant</title>
+    <title>Lory Marc – Comédien & Figurant à Lille | Site officiel</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="logo.webp" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-	<meta name="description" content="Portfolio de Lory Marc, créateur web et designer. Découvrez mes projets, compétences et réalisations.">
+	<meta name="description" content="Lory Marc, comédien et figurant basé à Lille. Découvrez son parcours, ses expériences et ses projets dans le cinéma, le théâtre et la publicité.">
 	<!-- GOOGLE SEO -->
 	<link rel="canonical" href="https://lory-marc.fr/">
 	
@@ -42,7 +42,7 @@
 		  "@type": "WebSite",
 		  "name": "Lory Marc",
 		  "url": "https://lory-marc.fr",
-		  "description": "Portfolio de Lory Marc, créateur web et designer.",
+		  "description": "Portfolio de Lory Marc, comédien et figurant sur Lille (France)",
 		  "publisher": {
 		    "@type": "Person",
 		    "name": "Lory Marc"
